--- a/etl/add-dags-to-composer.cloudbuild.yaml
+++ b/etl/add-dags-to-composer.cloudbuild.yaml
@@ -2,9 +2,9 @@ steps:
   # install dependencies
   - name: python
     entrypoint: pip
-    args: ["install", "-r", "utils/requirements.txt", "--user"]
+    args: ["install", "-r", "etl/utils/requirements.txt", "--user"]
 
   # run
   - name: python
     entrypoint: python
-    args: ["utils/add_dags_to_composer.py", "--dags_directory=${_DAGS_DIRECTORY}", "--dags_bucket=${_DAGS_BUCKET}"]
+    args: ["etl/utils/add_dags_to_composer.py", "--dags_directory=${_DAGS_DIRECTORY}", "--dags_bucket=${_DAGS_BUCKET}"]
