--- a/etl/test-airline-dag-sql.cloudbuild.yaml
+++ b/etl/test-airline-dag-sql.cloudbuild.yaml
@@ -2,15 +2,15 @@ steps:
   # install dependencies
   - name: python:3.8-slim
     entrypoint: pip
-    args: ["install", "-r", "requirements.txt", "-c", "constraints.txt", "--user"]
+    args: ["install", "-r", "etl/requirements.txt", "-c", "etl/constraints.txt", "--user"]
   
   - name: python:3.8-slim
     entrypoint: pip
-    args: ["install", "-r", "requirements-test.txt", "--user"]
+    args: ["install", "-r", "etl/requirements-test.txt", "--user"]
 
   # run in python 3.8 which is latest version in Cloud Composer
   - name: python:3.8-slim
     entrypoint: python3.8
-    args: ["-m", "pytest", "-s", "dags/"]
+    args: ["-m", "pytest", "-s", "etl/dags/"]
 
 # [END composer_cicd_unittest_yaml]
